--- a/Aegis-NewViews/Info.plist
+++ b/Aegis-NewViews/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Nexa-Trial-Heavy.ttf</string>
+		<string>Nexa-Trial-Regular.ttf</string>
 		<string>NexaRegular.otf</string>
 		<string>Nexaight.otf</string>
 	</array>
