--- a/Aegis-NewViews/Info.plist
+++ b/Aegis-NewViews/Info.plist
@@ -7,7 +7,8 @@
 		<string>Nexa-Trial-Heavy.ttf</string>
 		<string>Nexa-Trial-Regular.ttf</string>
 		<string>NexaRegular.otf</string>
-		<string>Nexaight.otf</string>
+		<string>Nexa-Trial-Light.ttf</string>
+		<string></string>
 	</array>
 </dict>
 </plist>
