--- a/Aegis-NewViews/Info.plist
+++ b/Aegis-NewViews/Info.plist
@@ -11,9 +11,11 @@
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIColorName</key>
-		<string>Black</string>
+		<string>Dark</string>
 		<key>UIImageName</key>
 		<string>icon</string>
+		<key>UIImageRespectsSafeAreaInsets</key>
+		<false/>
 		<key>UILaunchScreen</key>
 		<dict/>
 	</dict>
