--- a/Aegis-NewViews/Info.plist
+++ b/Aegis-NewViews/Info.plist
@@ -4,9 +4,9 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Nexa-Light.ttf</string>
-		<string>Nexa-Regular.ttf</string>
-		<string>Nexa-Bold.ttf</string>
+		<string>poppins.light.ttf</string>
+		<string>poppins.regular.ttf</string>
+		<string>poppins.bold.ttf</string>
 	</array>
 	<key>UILaunchScreen</key>
 	<dict>
