--- a/Aegis-NewViews/Info.plist
+++ b/Aegis-NewViews/Info.plist
@@ -14,7 +14,7 @@
 		<key>UIColorName</key>
 		<string>Dark</string>
 		<key>UIImageName</key>
-		<string>icon</string>
+		<string>Logo</string>
 		<key>UIImageRespectsSafeAreaInsets</key>
 		<false/>
 		<key>UILaunchScreen</key>
