--- a/Aegis-NewViews/Info.plist
+++ b/Aegis-NewViews/Info.plist
@@ -4,19 +4,19 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>poppins.light.ttf</string>
-		<string>poppins.extrabold.ttf</string>
-		<string>poppins.thin.ttf</string>
-		<string>poppins.extralight.ttf</string>
-		<string>poppins.regular.ttf</string>
-		<string>poppins.bold.ttf</string>
+		<string>Poppins-Light.ttf</string>
+		<string>Poppins-ExtraBold.ttf</string>
+		<string>Poppins-Thin.ttf</string>
+		<string>Poppins-ExtraLight.ttf</string>
+		<string>Poppins-Regular.ttf</string>
+		<string>Poppins-Bold.ttf</string>
 	</array>
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIColorName</key>
 		<string>Dark</string>
 		<key>UIImageName</key>
-		<string>Logo</string>
+		<string>logo</string>
 		<key>UIImageRespectsSafeAreaInsets</key>
 		<false/>
 		<key>UILaunchScreen</key>
