--- a/Aegis-NewViews/Info.plist
+++ b/Aegis-NewViews/Info.plist
@@ -11,6 +11,7 @@
 		<string>Poppins-Regular.ttf</string>
 		<string>Poppins-Bold.ttf</string>
 		<string>Poppins-Black.ttf</string>
+		<string>Poppins-Medium.ttf</string>
 	</array>
 	<key>UILaunchScreen</key>
 	<dict>
